--- a/package.json
+++ b/package.json
@@ -4,50 +4,54 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "farm start",
-    "build": "tsc && farm build",
-    "preview": "farm preview",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "autocorrect": "node src/tools/autocorrect **/*.md --verbose"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@farmfe/cli": "^1.0.1",
-    "@farmfe/core": "^1.1.2",
-    "@farmfe/plugin-react": "^1.0.0",
     "@fontsource/roboto": "^5.0.13",
+    "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@mui/material": "next",
-    "@mui/styles": "^5.15.16",
-    "@tanstack/react-query": "^5.35.1",
+    "@mui/styles": "^5.15.18",
+    "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-virtual": "^3.5.0",
     "@types/markdown-it": "^14.1.1",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.12",
     "@types/react": "npm:types-react@beta",
     "@types/react-dom": "npm:types-react-dom@beta",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "autocorrect-node": "^2.9.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autocorrect-node": "^2.9.2",
     "clsx": "^2.1.1",
-    "core-js": "^3.37.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "core-js": "^3.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "glob": "^10.3.12",
-    "lefthook": "^1.6.10",
+    "glob": "^10.3.15",
+    "lefthook": "^1.6.12",
     "markdown-it": "^14.1.0",
     "markdown-it-prism": "^2.3.0",
-    "mdi-material-ui": "^7.8.0",
+    "mdi-material-ui": "^7.9.1",
     "prismjs": "^1.29.0",
     "react": "beta",
     "react-dom": "beta",
     "react-refresh": "^0.14.2",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "timeago.js": "^4.0.2",
     "typeface-roboto": "^1.1.13",
     "typescript": "^5.4.5",
+    "vite": "^5.0.4",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-minify": "^1.5.2",
+    "vite-plugin-replace": "^0.1.1",
+    "vite-plugin-svgr": "^4.2.0",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "typescript-eslint": "^7.9.0"
   }
 }
